Add field names for FactoryConstructorStrategy.