@@ -8,13 +8,19 @@ import java.lang.reflect.Parameter;
 import java.lang.reflect.Type;
 import java.util.*;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
+/**
+ * Creates a {@link ConstructionStrategy}s from a factory methods.
+ *
+ * @param <T>
+ */
 public class FactoryConstructorStrategy<T> implements ConstructionStrategy<T> {
 
     private final Type type;
 
-    /** The factory object */
+    /**
+     * The factory object
+     */
     private final Object factory;
 
     private final Method method;
@@ -31,35 +37,77 @@ public class FactoryConstructorStrategy<T> implements ConstructionStrategy<T> {
         this.setters = setters;
     }
 
-
+    /**
+     * Create a {@link ConstructionStrategy} from a named static method of a class.
+     * The field names may be provided or the parameter names of the method are used as
+     * the field name. To use the source parameter names the code must be
+     * compiled with -parameters.
+     *
+     * @param cl     The class.
+     * @param methodName The method name.
+     * @param fieldNames The name of the fields to be used instead of the parameter names.
+     *
+     * @param <T>    The type of the Object being created.
+     *
+     * @return A Construction Strategy.
+     */
     public static <T> ConstructionStrategy<T> from(Class<?> cl,
-                                     String method) {
+                                                   String methodName,
+                                                   String... fieldNames) {
+
 
         List<Method> methods = Arrays.stream(cl.getMethods())
-                .filter(m -> m.getName().equals(method))
-                .collect(Collectors.toList());
+                .filter(m -> m.getName().equals(methodName))
+                .toList();
 
-        if (methods.size() != 1) {
-            throw DataException.of("Unexpected number of methods " + methods.size() +
-                    ": " + methods);
+        Method method;
+        if (methods.size() == 1) {
+            method = methods.getFirst();
+        }
+        else {
+            method = methods.stream()
+                    .filter(m -> m.getParameters().length == fieldNames.length)
+                    .findFirst()
+                    .orElseThrow(() -> new DataException("Unexpected number of methods "
+                            + methods.size() + ": " + methods));
         }
 
-        return from(cl, methods.get(0));
+        return from(cl, method, fieldNames);
     }
 
+    /**
+     * Create a {@link ConstructionStrategy} from a static method of a class.
+     * The field names may be provided or the parameter names of the method are used as
+     * the field name. To use the source parameter names the code must be
+     * compiled with -parameters.
+     *
+     * @param cl     The class.
+     * @param method The method.
+     * @param fieldNames The name of the fields to be used instead of the parameter names.
+     *
+     * @param <T>    The type of the Object being created.
+     *
+     * @return A Construction Strategy.
+     */
     public static <T> ConstructionStrategy<T> from(Class<?> cl,
-                                                   Method m) {
+                                                   Method method,
+                                                   String... fieldNames) {
 
-        Parameter[] parameters = m.getParameters();
+        Parameter[] parameters = method.getParameters();
         Map<String, ValueSetter> setters = new LinkedHashMap<>(parameters.length);
         for (int i = 0; i < parameters.length; i++) {
             Parameter parameter = parameters[i];
-            String name = parameter.getName();
+            String name;
+            if (i < fieldNames.length) {
+                name = fieldNames[i];
+            } else {
+                name = parameter.getName();
+            }
             setters.put(name, new MethodSetter(name,
                     parameter.getParameterizedType(), i));
         }
 
-        return new FactoryConstructorStrategy<>(cl, null, m, setters);
+        return new FactoryConstructorStrategy<>(cl, null, method, setters);
     }
 
     @Override
@@ -131,7 +179,7 @@ public class FactoryConstructorStrategy<T> implements ConstructionStrategy<T> {
                 //noinspection unchecked
                 return (T) method.invoke(factory, values);
             } catch (IllegalAccessException | InvocationTargetException e) {
-                throw DataException.of("Failed creating instance from " + method +
+                throw new DataException("Failed creating instance from " + method +
                         " with parameters " + Arrays.toString(values));
             }
         }
